Bug 158807 - FILESAVE: PPT: transparency converted to black
Summary: FILESAVE: PPT: transparency converted to black
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-12-21 13:03 UTC by Xisco Faulí
Modified: 2023-12-29 11:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-12-21 13:03:51 UTC
Steps to reproduce:
1. Open attachment 46801 [details] from bug 37282
2. Save it to PPT
3. Open the new file

-> The background around the bird is black. It should be transparent

Reproduced in

Version: 24.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 0034d2ab9382da86340738137218791a4ccc9c90
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fr-FR (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-12-21 13:04:34 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-12-05 10:45:33 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-12-06 07:08:18 +0100
commit bb3157e38bfffd23505abc35f790043392f43d2c (patch)
tree a4a21f66f3757071dcf96f0d649eed33dd7d82a4
parent a9ad36ae46ff76c0d59b0d170314fdd3a9ee5d35 (diff)
Remove the special-casing in Bitmap::Invert (and fix)

Bisected with: bibisect-linux64-24.2
Comment 2 Patrick (volunteer) 2023-12-21 13:39:26 UTC
I can reproduce this in my local macOS build with Skia/Metal, Skia/Raster, and Skia disabled.
Comment 3 Patrick (volunteer) 2023-12-22 19:10:51 UTC
I cannot reproduce this bug if I save as .ods or .pptx and then reopen the saved file. So, I think that the bug is likely is somewhere in the .ppt export code and we just need to find where the image is exported and invert the alpha mask before saving to .ppt.
Comment 4 Commit Notification 2023-12-23 18:33:11 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e582d9e3fbed8cb94284ac1ab6105cf74eccfe0

Related: tdf#158807 mutex must be locked when disposing a VirtualDevice

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-12-24 13:43:00 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d514b422257ccf2b53215ee948dda2c9a476d37

tdf#158807 Call UpdatePaletteForNewColor with rReplaceColor parameter

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-12-24 16:00:14 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/df08a291c4aea3e777f786c65048b03b4a13dbdb

tdf#158807 Call UpdatePaletteForNewColor with rReplaceColor parameter

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-12-29 11:43:42 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/8a1ddb42a654d77013fd107efe8c97c8a3615036

Related: tdf#158807 mutex must be locked when disposing a VirtualDevice

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-12-29 11:43:48 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/744aaf0d068505fdbf4dcc66eabaf495cdd4fcb3

Related: tdf#158807 mutex must be locked when disposing a VirtualDevice

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.